workspace(
    name = "rules_haskell_invalid_byte_sequence",
)

load(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "rules_haskell",
    sha256 = "5bc145adc1e1052dcf3a23f8646bc024a30678a48d25d7a65d1b002db62b5a79",
    strip_prefix = "rules_haskell-423734f898a855a082c87dec5efab1a7c48b8bd2",
    urls = [
        "https://github.com/joneshf/rules_haskell/archive/423734f898a855a082c87dec5efab1a7c48b8bd2.zip",
    ],
)

load(
    "@rules_haskell//haskell:repositories.bzl",
    "rules_haskell_dependencies",
)

rules_haskell_dependencies()

load(
    "@rules_haskell//haskell:toolchain.bzl",
    "rules_haskell_toolchains",
)

rules_haskell_toolchains(
    locale = "en_US.UTF-8",
    version = "8.8.2",
)

load(
    "@rules_haskell//haskell:cabal.bzl",
    "stack_snapshot",
)

stack_snapshot(
    name = "stackage",
    packages = [
        "path-io",
    ],
    snapshot = "lts-15.0",
)
